Post bioHaiku Winners

--- a/_posts/2018-08-12-README.txt.md
+++ b/_posts/2018-08-12-README.txt.md
@@ -33,6 +33,10 @@ $$&nbsp;|&nbsp;&nbsp;$$&nbsp;|\$$$$$$$&nbsp;|\$$$$$$$\&nbsp;$$&nbsp;|&nbsp;\$$\&
 
 **100% DIY:** Share an idea. Join a team. Hack a solution together.
 
+## [bioHaiku Contest](https://hackseq.github.io/hs18/2018/10/04/BioHaiku_Contest.html)
+Write a biology / bioinformatics themed haiku to enter for a chance to win a DNA Ancestry Testing Kit* (or choice of bookstore giftcard). Contest runs until Sunday October 14th '18 at Noon PST. Winners will be announced at hackseq18 closing stream.
+
+
 ## Team Leaders
 
 hackseq projects are started by someone like you. If you have a scientific idea you want to turn into a reality then you're a Team Leader -- [Apply Here](https://hackseq.github.io/hs18/2018/03/14/team-leads.txt.html)
