beRi abstract updated

--- a/_posts/2018-08-11-Projects2018.txt.md
+++ b/_posts/2018-08-11-Projects2018.txt.md
@@ -69,7 +69,11 @@ We used MetaPathways v2.5 in combination with Pathway Tools and the MetaCyc hier
 
 **Abstract:**
 
-The R programming language currently lacks a standard way to resolve common dependency issues that make it difficult to reproduce various data analysis. Therefore the R community needs a tool or toolkit like Python's pip or JavaScript's npm. beRi ("beri environments for R installations") is a package management, reproducible workflow, and installation toolkit for the R programming language. The project will be developed under 4 separate repositories: [renv](https://github.com/datasnakes/renv) (virtual environments), [rinse](https://github.com/datasnakes/rinse) (source installation), [rut](https://github.com/datasnakes/rut) (dependency utils), and beRi (core). This project will primarily be built using Python 3, but will also utilize R and bash. R's documentation will be relied on for guidance.
+The R programming language is a popular choice for statisticians, bioinformaticians, and researchers performing data analysis work.  However, it lacks management tools that ensure reproducibility and integration with command line interfaces (CLI).
+  
+*Problem:* R lacks proper management tools such as a project manager, a virtual environment manager, or a package manager.  Many available tools are R packages, making it laborious to manage R from the command line.  While Rstudio has developed packrat, a project management tool, it has performance issues including lengthy build times. packrat also works poorly with Bioconductor, one of the most widely used R package repositories outside of CRAN. Building an R CLI is also a daunting task even for advanced R users.
+
+*Solution:* We propose the beRi suite of tools for managing R.  beRi is a set of Python packages which is composed of renv - an R virtual environment manager, rinse - an R installation manager and utility tool for installing packages, and rut - a manager for native R configuration files and local CRAN-like repositories.  Since these packages will be developed as standalone or fully independent CLI’s, beRi will integrate these three packages and complement their functionalities in a separate higher function interface.
 
 ----------------------------------------
 
