--- a/_posts/2018-08-11-Projects2018.txt.md
+++ b/_posts/2018-08-11-Projects2018.txt.md
@@ -11,11 +11,6 @@ tags: participants apply
 1. Project 1: REUSE
 2. ...
 
-**Skill Proficiencies**<br/><br/>
- 	\*       : "I can work with this langauge, if I have access to Stack Overflow ..."<br/><br/>
- 	\* \*    : "I know this language and use it regularily."<br/><br/>
- 	\* \* \* : "I am one with the language."<br/><br/>
-
 ----------------------------------------
 
 ## [Project 1: REUSE](https://github.com/chorltsd/REUSE)
@@ -25,13 +20,9 @@ tags: participants apply
 
 **Abstract:**
 
-Filtering unwanted sequences from nucleic acid sequencing data is an important step in many analyses. It has been used to remove technical artefacts (eg. PhiX), discover known and novel pathogens, isolate nucleic acid types (eg rRNA), and remove noise in metagenomic studies. This step significantly improves the speed and quality of subsequent analyses.
+Rapid Elimination of Useless SEquences
 
-Here I propose an end-to-end pipeline (REUSE) for Rapidly Eliminating Unwanted SEquences from large sequencing datasets. The result of REUSE will be sequences that do not belong to a reference sequence. This pipeline will be based on previously established techniques for isolating known and novel pathogens among sequencing data. It will seek to dramatically speed up the process, optimize flaws in other pipelines, and automate it from start to finish. It will likely include a k-mer filter, read alignment, read assembly, and contig alignment. Some of these steps will be based on publicly available tools, such as RNA-STAR and Trinity, whereas others will need to be programmed from the ground up.
-
-The work at hackseq18 will focus on development of the most novel and needed module, the k-mer filter (k-REUSE). Previous evidence indicates that k-mers can be used to rapidly screen and filter sequences, and that a k-mer of 21 basepairs is sufficient to discriminate between unrelated species.(1) Currently published applications, such as Kontaminant(1), Cookiecutter(2), BBDuk(3) and others have several limitations, including lack of parallelization, high memory requirements (>50gb for the human genome), and lack of ability to save the reference index to disk. Other techniques, such a read alignment, are too slow to use on large datasets.
-
-The goal of HackSeq18 will be the development of k-REUSE and comparison to other filters. Further development will likely be needed after the hackathon for integration of k-REUSE into the complete REUSE pipeline and ultimate application to extremely large datasets.
+REUSE is a k-mer based tool for filtration of reads in sequencing datasets that match a reference sequence. reuse build takes a reference fasta file as input, and ouputs a hashed index file. reuse filter takes FASTA/FASTQ file inputs, along with the hashed index file, and outputs k-mer filtered reads in a user-specified format. Common applications of REUSE include filtration of host, contamination, PhiX or ribosomal sequences.
 
 ----------------------------------------
 
@@ -42,9 +33,11 @@ The goal of HackSeq18 will be the development of k-REUSE and comparison to other
  
 **Abstract:**
 
-Genome sequencing yields many short reads of DNA from a genome. Genome assembly attempts to reconstruct the original genome from these reads. Most genome assembler software tools are pipelines of many stages. It's not however typical to mix and match stages from different tools. Our Hackseq project aims to create a better assembly tool by mixing and matching components of various assembly tools.
+Genome sequencing yields many short reads of DNA from a genome. Genome assembly attempts to reconstruct the original genome from these reads. Most genome assembler software tools are pipelines of many stages. These tools all work towards the same goal using different methods, and new tools allow for interoperability between all the different stages of different assemblers.
 
-We will work together to create modular assembler components for AssemblerFlow, a tool which builds pipelines of tools for genome assembly using Nextflow. Each participant will create and run a genome assembly pipeline using AssemblerFlow. We will assess the quality of each assembly, using Quast. Finally, we'll create a leader board of awesomeness to compare the assembly results!
+*Problem*: It is not common to mix and match stages from all the different assembly tools into one and understand the benefits or the disadvantages of doing that, specifically towards understanding the improvement of the assembly quality. Therefore our Hackseq project aims to create a better assembly tool by mixing and matching components of various assembly tools, and visualising the results of this work. The assembly tools that we are considering are displayed here.
+
+*Solution*: We have attempted to solve this problem by creating modular assembler components for AssemblerFlow, a tool which builds pipelines of tools for genome assembly using Nextflow, and we have created components for a number of assembly tools.
 
 ----------------------------------------
 
@@ -55,9 +48,10 @@ We will work together to create modular assembler components for AssemblerFlow, 
 
 **Abstract:**
 
-TARA Oceans represents one of the world’s greatest coordinated research and sampling efforts and has collected years of standardized and detailed information about Earth’s largest cohesive eco-system providing insights crucial for the preservation of mankind our planet. Of particular focus is microbial community metabolism, which drives biogeochemical cycling in the ocean through networks of metabolite exchange and gene transfer. Viruses can reprogram these networks by co-opting host metabolism during infection using auxiliary metabolic genes (AMGs) encoded in viral genomes. Metabolic reprogramming has the potential to alter metabolic flux at the individual, population and community levels with resulting feedback on biogeochemical cycling at ecosystem scales. While previous gene-centric studies have identified viral AMGs associated with carbon and energy metabolism in the sunlit and dark ocean, the extent to which reprogramming targets the metabolic repertoire of marine microbial communities remains unconstrained. Here we use a pathway-centric approach to identify known and novel metabolic hotspots associated with global AMG distribution patterns and bound viral reprogramming potential in the ocean.
 
-We used MetaPathways v2.5 in combination with Pathway Tools and the MetaCyc hierarchy of metabolic pathways to construct an environmental pathway genome database (ePGDBs) from hundreds of thousand viral contigs assembled from the Tara Oceans transect . This global ocean virome (GOV) was assembled from a subset of 90 viral fractions from a total of 288 size-fractioned samples spanning the entire transect. For Hackseq, we wish to construct a website called TaraCyc, which would represent a compendium of these ePGDBs and provide a comprehensive collection of MetaPathways output and extracted Environmental Pathway/Genome Databases (ePGDBs). Further, the TaraCyc website would allow world citizens to play, explore and interact with the dataset and gain understanding into the microscopic life living in Earth’s ocean.
+TaraCyc contains the first ever large-scale mapping of viral metabolomics data collected from ocean environments around the world. The Tara Oceans Project travelled worldwide collecting water samples for shotgun metagenomic sequencing. This genomic data has been mapped to metabolomic pathways. Recently, viruses have been shown to encode proteins that interact with host metabolic pathways in ways not previously explored, such as a set of cyanophage that modified photosynthetic activity in infected cyanobacteria in order to promote viral replication.
+
+The TaraCyc website contains all of this analysed metaviriome data with an interactive, user-friendly interface. The website can be accessed at: [Tara Viral Voyager](http://oganm.com/shiny/taracyc/).
 
 ----------------------------------------
 
@@ -96,14 +90,12 @@ Here, I propose to develop a pipeline for allowing users to apply NCD to their g
 
 **Abstract:**
 
-The goal of this project is to produce an application that is able to simulate structural variants in transcriptome data. The application will be written in python. It will be a pipeline consisting of several steps:
-- Specification of the structural variants to be simulated
-- Generation of the resulting transcriptome sequence
-- Simulating paired-end reads covering the structural variant breakpoints
-- Alignment of the simulated reads to the reference genome to produce a BAM file
 
-If you’re new to structural variants or working with sequencing data, it would be a good idea to do a bit of background reading. I’ve listed a some potentially relevant literature below.
-deFuse (PMID 21625565), Chimerascan (PMID 21840877), STAR (PMID 26334920), BAMSurgeon (PMID 25984700), Flux Simulator (PMID 22962361), MAVIS (PMID 30016509), SQUID (PMID 29650026)
+In multicellular organisms, nearly every cell contains the same genome and thus the same genes. However, different cells show different gene expression underlying the different functions and tissues. Recent work in the cancer field, has shown that gene expression is more significant to disease outcomes than the genetic mutation 1.
+
+Structural variants of genetic information are primary drivers of many diseases 2, making them a prime target for bioinformatic tools, but new tools require test datasets. Datasets are frequently large, ambiguous and subject to restrictive sharing permissions. However, sufficient numbers of publicly available genomes has allowed for the establishment of simulation tools of SVs.
+
+Transcriptome sequencing is a much newer field, with a very low number of publicly available datasets — particularly in rare variants, significant to disease 3. Here we present a tool which injects SVs into a variety of different expression profiles to allow for the training and testing of bioinformatic tools. Simulating the transcriptome reads allows for a known ground truth so that we accurately quantify performance of tools not only in terms of sensitivity but also specificity.
 
 ----------------------------------------
 
@@ -126,4 +118,5 @@ Understanding how to track and prevent the spread of infectious diseases is a ta
  
 **Abstract:**
 
-With the rise of aging population and chronic diseases, Canada continues to suffer from the high costs of disease management [1-3]. Additionally, studies on prevalence and patterns of causes of morbidity or co-morbidity and associated determinants in Canada remain scarce and outdated [4]. Canadian Vital Statistics has recently released a comprehensive and well-annotated dataset on causes of death and mortality of all Canadians from 2012 until 2016. We hypothesize that understanding the major causes of mortality (i.e. various diseases) among males and females in different age categories across all provinces can inform health care and governmental policies. In this project, we will formulate hypotheses about what we most die of as a nation and test them by exploring these datasets. The overarching aim is to generate a final report on the most common causes of death across Canada that can at its best inform health care professionals and government agencies in developing evidence-base policies.
+Since 2016, the world has been implementing United Nation's Agenda for Sustainable Development, by addressing urgent global challenges over the next 15 years. This mandate is undertaken differently in various countries. In Canada, data on deaths and causes of death are collected by the Canadian Vital Statistics and released as a 'Death Database'. This database is an administrative survey that collects demographic and medical (cause of death) information annually from all provincial vital statistics registries on all deaths in Canada. The problem with the existing open datasets, however, are that they are too large and the categories are not well defined nor useful for non-data experts. Our hypothesis-driven solution enables interactive visualizations so that the information within the databases are more readily accessible, user-friendly, and interactive. We employ the free and open-source integrated development environment for R as part of our workflow to categorize diseases based on gender and age in time. This data is then summarized in the form of static and dynamic plots as well as interactive maps.
+
