Update README for long term hiberation

--- a/_posts/2018-08-11-Projects2018.txt.md
+++ b/_posts/2018-08-11-Projects2018.txt.md
@@ -6,6 +6,8 @@ tags: participants apply
 
 # hackseq18 project list
 
+**\{hackseq18's `bio-hackers supreme`: Team beRi\}**
+
 {:toc}
 
 1. Project 1: REUSE
