--- a/_posts/2018-08-12-README.txt.md
+++ b/_posts/2018-08-12-README.txt.md
@@ -20,31 +20,33 @@ $$&nbsp;|&nbsp;&nbsp;$$&nbsp;|\$$$$$$$&nbsp;|\$$$$$$$\&nbsp;$$&nbsp;|&nbsp;\$$\&
 
 # **Catalyzing \*omics innovation**
 
-*What:* hackseq is a open-science genomics hackathon.
+*What:* hackseq is a open-science genomics hackathon. It's a great place to meet like-minded individuals, learn, and create!
 
 *Who:* hackseq is open to everyone with coding experience. The focus is on empowering students and trainees who want to apply their skills and knowledge in a creative new way.
 
-*When:* hackseq18 is happening October 12-14 2018.
+*When:* hackseq18 happened October 12-14 2018.
 
 *Where:* UBC Life Sciences Center -- Vancouver, BC. Canada
 
-
 \*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*\*
 
-**100% DIY:** Share an idea. Join a team. Hack a solution together.
+**100% DIY:** Share an idea. Form a team. Hack a solution together.
+
+## The Projects
+hackseq18 was bigger then ever. We had 80 participants join together to tackle 8 challenging bioinformatics problems. [Learn more](https://hackseq.github.io/hs18/2018/08/11/Projects2018.txt.html) about each of the projects.
+
+<div>
+<img src="https://hackseq.github.io/hs18/hs18_last_hour.jpeg" width="400">
+</div>
+
+When the dust settled [Team beRi: Virtual Environments for R](https://github.com/datasnakes/beRi) won out and was crowned this year's `biohackers Supreme`. 
 
 ## [bioHaiku Contest](https://hackseq.github.io/hs18/2018/10/04/BioHaiku_Contest.html)
-Write a biology / bioinformatics themed haiku to enter for a chance to win a DNA Ancestry Testing Kit* (or choice of bookstore giftcard). Contest runs until Sunday October 14th '18 at Noon PST. Winners will be announced at hackseq18 closing stream.
+hackseq18 also saw the first biology poetry contest. Read the haiku entries and contemplate what it means to do computational biology.
 
+<div></div>
 
-## Team Leaders
-
-hackseq projects are started by someone like you. If you have a scientific idea you want to turn into a reality then you're a Team Leader -- [Apply Here](https://hackseq.github.io/hs18/2018/03/14/team-leads.txt.html)
-
-## Participants
-
-A hackathon is a great place to meet like-minded individuals, learn, and collaborate to create something big. If you want to join a hackseq team -- [Apply Here](https://hackseq.github.io/hs18/2018/03/15/participants.txt.html)
-
+To take part in future hackseq events, join the [hackseq Collective](https://www.hackseq.com/mail)
 
 <br><br>
 <p> * Theme by <a href="http://github.com/h01000110" target="_blank">h01000110</a> | <a href="https://github.com/h01000110/h01000110.github.io/blob/master/LICENSE" target="_blank">MIT</a></p>
