add video stream link

--- a/_posts/2018-08-11-Projects2018.txt.md
+++ b/_posts/2018-08-11-Projects2018.txt.md
@@ -8,6 +8,8 @@ tags: participants apply
 
 **\{hackseq18's `bio-hackers supreme`: Team beRi\}**
 
+You can also watch the [video-stream](https://youtu.be/xNZRBpEhnY4?t=609) of the final presentations.
+
 {:toc}
 
 1. Project 1: REUSE
